--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 layout: default
 title: Home
 ---
-
+ 
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="0; url=https://carlodebernardi.github.io/about/">
+ 
+<script>
+  window.location.href = "https://carlodebernardi.github.io/about/"
+</script>
+ 
+<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+If you are not redirected automatically, follow the <a href='https://carlodebernardi.github.io/about/'>link to example</a>
