--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ title: Home
 </script>
  
 <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-If you are not redirected automatically, follow the <a href='https://carlodebernardi.github.io/about/'>link to example</a>
+If you are not redirected automatically, follow the <a href='https://carlodebernardi.github.io/about/'>link</a>.
